--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,12 +12,13 @@
   <script src="lib/jasmine-2.4.1/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <script src="src/thermostat.js"></script>
+  <script src="src/temperatureController.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+  <script src="spec/thermostatSpec.js"></script>
+  <script src="spec/temperatureControllerSpec.js"></script>
+  <script src="spec/features/temperatureControlSpec.js"></script>
 
 </head>
 
